updated vendor, store, products page

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <!-- Code To Add Favicon -->
+  <link rel="shortcut icon" type="image/png" href="/img/smallFav.png">
   <title>Skip The Door</title>
 
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
@@ -106,13 +107,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank">About</a>
+            <a class="nav-link" href="./aboutUs.html" target="_blank">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./login.html">Sign-up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank">Settings</a>
+            <a class="nav-link" href="./vendor2.html">Settings</a>
           </li>
         </ul>
       </div>
@@ -153,7 +154,7 @@
                 <strong>Shop Now!</strong>
               </p>
 
-              <form class="form-inline mr-auto">
+              <form action="store.html" class="form-inline mr-auto">
                 <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" aria-label="Search">
                 <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
               </form>
@@ -185,7 +186,7 @@
                 <strong>Shop Now!</strong>
               </p>
 
-              <form class="form-inline mr-auto">
+              <form action="store.html" class="form-inline mr-auto">
                 <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" aria-label="Search">
                 <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
               </form>
@@ -217,16 +218,12 @@
                 <strong>Shop Now!</strong>
               </p>
 
-              <form class="form-inline mr-auto">
+              <form action="store.html" class="form-inline mr-auto">
                 <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" aria-label="Search">
                 <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
               </form>
             </div>
             <!-- Content -->
-
-            <!-- <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/"
-                class="btn btn-outline-white btn-lg">Start free tutorial
-                <i class="fas fa-graduation-cap ml-2"></i> -->
 
           </div>
           <!-- Mask & flexbox options-->
@@ -288,8 +285,7 @@
             </p>
 
             <!-- CTA -->
-            <a target="_blank" href="#"
-              class="btn btn-indigo btn-md">Explore
+            <a target="_blank" href="#" class="btn btn-indigo btn-md">Explore
             </a>
 
           </div>
@@ -330,8 +326,7 @@
             </p>
 
             <!-- CTA -->
-            <a target="_blank" href="#"
-              class="btn btn-indigo btn-md">Shop Now
+            <a target="_blank" href="#" class="btn btn-indigo btn-md">Shop Now
             </a>
 
           </div>
@@ -371,8 +366,7 @@
             </p>
 
             <!-- CTA -->
-            <a target="_blank" href="./login.html"
-              class="btn btn-indigo btn-md">Sign-up
+            <a target="_blank" href="./login.html" class="btn btn-indigo btn-md">Sign-up
             </a>
 
           </div>
@@ -456,7 +450,7 @@
       <!--Section: Not enough-->
       <section>
 
-        <h2 class="my-5 h3 text-center">About Us</h2>
+        <h2 class="my-5 h3 text-center">Learn More</h2>
 
         <!--First row-->
         <div class="row features-small mb-5 mt-3 wow fadeIn">
@@ -493,216 +487,6 @@
       </section>
       <!--Section: Not enough-->
 
-      <hr class="mb-5">
-
-      <!--Section: More-->
-      <section>
-
-        <h2 class="my-5 h3 text-center">Our Team</h2>
-
-        <!--First row-->
-        <div class="row features-small mt-5 wow fadeIn">
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-3">
-            <!--Grid row-->
-            <div class="row">
-
-              <div class="col-12 mb-2">
-                <!-- Card Regular -->
-                <div class="card card-cascade">
-
-                  <!-- Card image -->
-                  <div class="view view-cascade overlay">
-                    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg"
-                      alt="Card image cap">
-                    <a>
-                      <div class="mask rgba-white-slight"></div>
-                    </a>
-                  </div>
-
-                  <!-- Card content -->
-                  <div class="card-body card-body-cascade text-center">
-
-                    <!-- Title -->
-                    <h4 class="card-title"><strong>Troy Lee</strong></h4>
-                    <!-- Subtitle -->
-                    <h6 class="font-weight-bold indigo-text py-2">Senior Web Developer</h6>
-                    <!-- Text -->
-                    <p class="card-text">“It's not what you achieve, it's what you overcome. That's what defines your career."
-                    </p>
-
-                    <!-- Facebook -->
-                    <a type="button" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!-- Twitter -->
-                    <a type="button" class="btn-floating btn-small btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!-- Google + -->
-                    <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fab fa-github-alt"></i></a>
-
-                  </div>
-
-                </div>
-                <!-- Card Regular -->
-              </div>
-            </div>
-            <!--/Grid row-->
-
-
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-3">
-            <!--Grid row-->
-            <div class="row">
-
-              <div class="col-12 mb-2">
-                <!-- Card Regular -->
-                <div class="card card-cascade">
-
-                  <!-- Card image -->
-                  <div class="view view-cascade overlay">
-                    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg"
-                      alt="Card image cap">
-                    <a>
-                      <div class="mask rgba-white-slight"></div>
-                    </a>
-                  </div>
-
-                  <!-- Card content -->
-                  <div class="card-body card-body-cascade text-center">
-
-                    <!-- Title -->
-                    <h4 class="card-title"><strong>Charlie Wei</strong></h4>
-                    <!-- Subtitle -->
-                    <h6 class="font-weight-bold indigo-text py-2">IT Manager</h6>
-                    <!-- Text -->
-                    <p class="card-text">"The best way to predict the future is to create it."
-                    </p>
-
-                    <!-- Facebook -->
-                    <a type="button" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!-- Twitter -->
-                    <a type="button" class="btn-floating btn-small btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!-- Google + -->
-                    <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fab fa-github-alt"></i></a>
-
-                  </div>
-
-                </div>
-                <!-- Card Regular -->
-              </div>
-            </div>
-            <!--/Grid row-->
-
-
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-3">
-            <!--Grid row-->
-            <div class="row">
-
-              <div class="col-12 mb-2">
-                <!-- Card Regular -->
-                <div class="card card-cascade">
-
-                  <!-- Card image -->
-                  <div class="view view-cascade overlay">
-                    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg"
-                      alt="Card image cap">
-                    <a>
-                      <div class="mask rgba-white-slight"></div>
-                    </a>
-                  </div>
-
-                  <!-- Card content -->
-                  <div class="card-body card-body-cascade text-center">
-
-                    <!-- Title -->
-                    <h4 class="card-title"><strong>Keegan Elgin</strong></h4>
-                    <!-- Subtitle -->
-                    <h6 class="font-weight-bold indigo-text py-2">Senior Software Developer</h6>
-                    <!-- Text -->
-                    <p class="card-text">"Dreams are extremely important. You can't do it unless you imagine it."
-                    </p>
-
-                    <!-- Facebook -->
-                    <a type="button" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!-- Twitter -->
-                    <a type="button" class="btn-floating btn-small btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!-- Google + -->
-                    <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fab fa-github-alt"></i></a>
-
-                  </div>
-
-                </div>
-                <!-- Card Regular -->
-              </div>
-            </div>
-            <!--/Grid row-->
-
-
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-3">
-            <!--Grid row-->
-            <div class="row">
-
-              <div class="col-12 mb-2">
-                <!-- Card Regular -->
-                <div class="card card-cascade">
-
-                  <!-- Card image -->
-                  <div class="view view-cascade overlay">
-                    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg"
-                      alt="Card image cap">
-                    <a>
-                      <div class="mask rgba-white-slight"></div>
-                    </a>
-                  </div>
-
-                  <!-- Card content -->
-                  <div class="card-body card-body-cascade text-center">
-
-                    <!-- Title -->
-                    <h4 class="card-title"><strong>William Kwok</strong></h4>
-                    <!-- Subtitle -->
-                    <h6 class="font-weight-bold indigo-text py-2">Senior Computer Systems Analyst</h6>
-                    <!-- Text -->
-                    <p class="card-text">
-                      "All you need in this life is ignorance and confidence, and then success is sure."
-                    </p>
-
-                    <!-- Facebook -->
-                    <a type="button" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
-                    <!-- Twitter -->
-                    <a type="button" class="btn-floating btn-small btn-tw"><i class="fab fa-twitter"></i></a>
-                    <!-- Google + -->
-                    <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fab fa-github-alt"></i></a>
-
-                  </div>
-
-                </div>
-                <!-- Card Regular -->
-              </div>
-            </div>
-            <!--/Grid row-->
-
-
-          </div>
-          <!--/Grid column-->
-
-        </div>
-        <!--/First row-->
-
-      </section>
-      <!--Section: More-->
-
-
     </div>
   </main>
   <!--Main layout-->
@@ -712,12 +496,10 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="./login.html"
-        target="_blank" role="button">Sign-up
+      <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
         <i class="fas fa-user ml-2"></i>
       </a>
-      <a class="btn btn-outline-white" href="#" target="_blank"
-        role="button">Shop Now
+      <a class="btn btn-outline-white" href="#" target="_blank" role="button">Shop Now
         <i class="fas fa-shopping-cart ml-2"></i>
       </a>
     </div>
@@ -776,71 +558,4 @@
 
 </body>
 
-
 </html>
-=======
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.14.2/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.14.2/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.14.2/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.14.2/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.14.2/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
-</html>
->>>>>>> william_kwok_feature
