--- a/public/login.html
+++ b/public/login.html
@@ -58,7 +58,7 @@
         },
         // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
         signInFlow: 'popup',
-        signInSuccessUrl: 'products.html',
+        signInSuccessUrl: 'store.html',
         signInOptions: [
             // Leave the lines as is for the providers you want to offer your users.
             //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
