Search on store + easter

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -129,8 +129,8 @@
               </p>
 
               <form class="form-inline mr-auto">
-                <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" aria-label="Search">
-                <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" id="searchBar">
+                <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit" id="searchClick">Search</button>
               </form>
             </div>
             <!-- Content -->
@@ -161,8 +161,8 @@
               </p>
 
               <form class="form-inline mr-auto">
-                <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" aria-label="Search">
-                <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" id="searchBar">
+                <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit" id="searchClick">Search</button>
               </form>
             </div>
             <!-- Content -->
@@ -193,8 +193,8 @@
               </p>
 
               <form class="form-inline mr-auto">
-                <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" aria-label="Search">
-                <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" id="searchBar">
+                <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit" id="searchClick">Search</button>
               </form>
             </div>
             <!-- Content -->
@@ -840,6 +840,21 @@
     // Animations initialization
     new WOW().init();
   </script>
+
+<input class="form-control mr-sm-2" type="text" placeholder="What do you want buy?" id="searchBar">
+<button class="btn btn-unique btn-rounded btn-sm my-0" type="submit" id="searchClick">Search</button>
+
+<script>
+function goSearch() {
+  localStorage.setItem("homeSearch", document.getElementById("searchBar").value);
+  console.log(localStorage.getItem("homeSearch"));
+}
+
+
+document.getElementById("searchClick").onclick = goSearch;
+</script>
+
+
 </body>
 
 </html>
