--- a/public/sdrawkcaB.html
+++ b/public/sdrawkcaB.html
@@ -84,46 +84,56 @@
 
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" id="thisNav">
-    <div class="container">
+ <!--Footer-->
+ <footer class="page-footer text-center font-small mt-4 wow fadeIn" id="thisFooter">
 
-      <!-- Brand -->
-      <a class="navbar-brand" href="#" target="_blank">
-        <strong>Skip The Door</strong>
+    <!--Call to action-->
+    <div class="pt-4">
+      <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
+        <i class="fas fa-user ml-2"></i>
+      </a>
+      <a class="btn btn-outline-white" href="#" target="_blank" role="button">Shop Now
+        <i class="fas fa-shopping-cart ml-2"></i>
+      </a>
+    </div>
+    <!--/.Call to action-->
+
+    <hr class="my-4">
+
+    <!-- Social icons -->
+    <div class="pb-4">
+      <a href="#" target="_blank">
+        <i class="fab fa-facebook-f mr-3"></i>
       </a>
 
-      <!-- Collapse -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a href="#" target="_blank">
+        <i class="fab fa-twitter mr-3"></i>
+      </a>
 
-      <!-- Links -->
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <a href="#" target="_blank">
+        <i class="fab fa-youtube mr-3"></i>
+      </a>
 
-        <!-- Left -->
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" target="_blank">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./login.html">Sign-up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./vendor2.html" target="_blank">Settings</a>
-          </li>
-        </ul>
-      </div>
+      <a href="#" target="_blank">
+        <i class="fab fa-google-plus-g mr-3"></i>
+      </a>
 
+      <a href="#" target="_blank">
+        <i class="fab fa-github mr-3"></i>
+      </a>
     </div>
-  </nav>
-  <!-- Navbar -->
+    <!-- Social icons -->
+
+    <!--Copyright-->
+    <div class="footer-copyright py-3">
+      © 2020 Copyright: (Skip The Door)
+      <a href="#" target="_blank"> https://group36-a3695.web.app </a>
+    </div>
+    <!--/.Copyright-->
+
+  </footer>
+
+ 
 
   <!--Main layout-->
   <main class="mt-2 pt-2">
@@ -131,6 +141,12 @@
 
       <!--Section: Cards-->
       <section class="pt-5">
+
+        
+        <div id="add-products">
+
+
+        </div>
 
         <!--Grid row-->
         <div class="row wow fadeIn">
@@ -154,10 +170,6 @@
 
         <hr class="m-1 mb-3">
 
-        <div id="add-products">
-
-
-        </div>
 
         <!--Pagination-->
         <nav class="d-flex justify-content-center wow fadeIn">
@@ -206,55 +218,46 @@
   </main>
   <!--Main layout-->
 
-  <!--Footer-->
-  <footer class="page-footer text-center font-small mt-4 wow fadeIn" id="thisFooter">
+ <!-- Navbar -->
+ <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar" id="thisNav">
+    <div class="container">
 
-    <!--Call to action-->
-    <div class="pt-4">
-      <a class="btn btn-outline-white" href="./login.html" target="_blank" role="button">Sign-up
-        <i class="fas fa-user ml-2"></i>
+      <!-- Brand -->
+      <a class="navbar-brand" href="#" target="_blank">
+        <strong>Skip The Door</strong>
       </a>
-      <a class="btn btn-outline-white" href="#" target="_blank" role="button">Shop Now
-        <i class="fas fa-shopping-cart ml-2"></i>
-      </a>
+
+      <!-- Collapse -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Links -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <!-- Left -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" target="_blank">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./login.html">Sign-up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./vendor2.html" target="_blank">Settings</a>
+          </li>
+        </ul>
+      </div>
+
     </div>
-    <!--/.Call to action-->
-
-    <hr class="my-4">
-
-    <!-- Social icons -->
-    <div class="pb-4">
-      <a href="#" target="_blank">
-        <i class="fab fa-facebook-f mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-twitter mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-youtube mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-google-plus-g mr-3"></i>
-      </a>
-
-      <a href="#" target="_blank">
-        <i class="fab fa-github mr-3"></i>
-      </a>
-    </div>
-    <!-- Social icons -->
-
-    <!--Copyright-->
-    <div class="footer-copyright py-3">
-      © 2020 Copyright: (Skip The Door)
-      <a href="#" target="_blank"> https://group36-a3695.web.app </a>
-    </div>
-    <!--/.Copyright-->
-
-  </footer>
-  <!--/.Footer-->
+  </nav>
+  <!-- Navbar -->
 
   <!-- SCRIPTS -->
   <!-- JQuery -->
@@ -366,8 +369,8 @@
       let search = document.getElementById("searcher").value;
 
       // Easter egg
-      if (search == "sdrawkcaB") {
-        window.location.pathname = 'public/sdrawkcaB.html';
+      if (search == "Backwards") {
+        window.location.pathname = 'public/store.html';
       } else {
       // Tidy user input
       search = search.charAt(0).toUpperCase() + search.slice(1).toLowerCase();
